= mite-rb Changelog

== Version 0.2.1

* Added archived and active collection-methods to Customer, Project, Service and User

== Version 0.2.0

* Added singleton resources account and myself (current authenticated user)
* Removed depreciated undo method
* Do not require rubygems
* Added Method to validate the connection to mite

== Version 0.1.0

* Use absolute classes to prevent collision with other classes

== Version 0.0.3

* Fixed wrong domain name (old one for testing removed)

== Version 0.0.2

* Added tracker-resource and methods on time_entry
* Fixed tiny datetimebug
* Dependency of activeresource 2.3.2 and activesupport 2.3.2
 
== Version 0.0.1

* Initial Version